cambios nuevos  para rama

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
+        <div id="container">
+            <di id="post">
         <h1>Aqui vamos hacer un blog post</h1>
-        <p>Y este es le parrafo de inicio</p>
+        <h1>prueba para una nueva rama</h1>
+        <p>Y este es le parrafo de inicio Y prueba para el Head</p>
+    </div>
+</di>
     </body>
 </html>
