agregar adicional del blog y cambio de tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <di id="post">
         <h1>Aqui vamos hacer un blog post</h1>
         <h1>prueba para una nueva rama</h1>
+        <h1>parrafo de la rama master</h1>
         <p>Y este es le parrafo de inicio Y prueba para el Head</p>
     </div>
 </di>
