cambios en la cabezera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <di id="post">
-        <h1>Aqui vamos hacer un blog post</h1>
+        <h1>Aqui vamos hacer un blog cabezera</h1>
         <h1>prueba para una nueva rama</h1>
         <h1>esto es para la nueva rama</h1>
         <h1>otra prueba mas para la rama</h1>
