--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
         <h1>otra prueba mas para la rama</h1>
 
         <p>Y este es le parrafo de inicio Y prueba para el Head</p>
+        <p>sucribite y dale like</p>
     </div>
 </di>
     </body>
